# parax

./: .gitignore  404.html  LICENSE  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy_docs.yml  docs.yml  publish.yml  tests.yml
api/annotation/: index.html
api/bounds/: index.html
api/constants/: index.html
api/constraints/: index.html
api/filters/: index.html
docs/: index.md  overview.md
license/: index.html
overview/: index.html
parax/: __init__.py  _bijectors.py  annotated.py  annotation.py  bijectors.py  bounded.py  bounds.py  constant.py  constants.py  constrainable.py  constraints.py  converters.py  distributions.py  field.py  filters.py  io.py  metadata.py  module.py  named.py  operator.py  parameter.py  parameter_group.py  parameter_metadata.py  parameters.py  paramtree.py  partition.py  probabilistic.py  probability.py  replace.py  serialization.py  spaces.py  tagged.py  transform.py  transforms.py  tree.py  unwrappable.py  unwrappables.py  variables.py  wrappable.py  wrappers.py
search/: search_index.json
tests/: conftest.py  dummy_model.py  optimize_test.py  parameter_test.py  paramtree_test.py  test_constraints.py  test_distributions.py  test_fit_quadratic.py  test_fitting.py  test_groups.py  test_infer_constraints.py  test_module_distribution.py  test_module_fields.py  test_module_params.py  test_parameter.py  test_params.py  test_replace.py  test_rlc.py  test_scipy.py  test_tied.py  test_transforms.py  test_unwrappables.py  test_variables.py  test_wrappers.py  tree_test.py
(+107 files in other folders)
