[project]
name = "parax"
version = "0.3.1"
description = "Declarative, parametric modelling in JAX"
readme = "README.md"
authors = [
    { name = "Gary Allen", email = "gvcallen@gmail.com" }
]
dependencies = [
    "equinox",
    "jax",
    "jaxtyping",
    "distreqx",
    "jsonpickle",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]"
]
test = [
    "pytest",
    "optimistix",
]

[project.urls]
homepage = "https://github.com/gvcallen/parax"

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ["parax"]